All files uploaded.God be Praised

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <main>
             <div id="selects">
                 <div class="select">
+                    <span>*Escolha duas moedas diferentes*</span>
                     <legend>Quantidade e Moeda Base</legend>
                     <select name="moedaBase" id="moedaBase">
                         <option value="">Selecione</option>
